# wav-rtos-sw

./: .clang-format  .gitmodules  CMake.in  CMakeLists.txt  CONTRIBUTING  Changes.md  LICENSE  MAINTAINERS  README.md  configure  server.py
app/: CMakeLists.txt  README
app/freertos-sample/: CMakeLists.txt  main.c
app/msg_loopback/: CMakeLists.txt  main.c
bsp/posix/: CMakeLists.txt
bsp/posix/alloy/: interrupt.c  interrupt.h  io.h
bsp/posix/board/: board.c  board.h
bsp/posix/freertos/: FreeRTOSConfig.h  core.c
bsp/wavious-mcu/: CMakeLists.txt  core.dts  design.dts  design.svd  metal.default.lds  metal.freertos.lds  metal.ramrodata.lds  metal.scratchpad.lds
bsp/wavious-mcu/board/: board.S  board.c  board.h  memory_map.h  wav_mcu_csr.h  wav_mcuintf_csr.h  wav_mcutop_csr.h
bsp/wavious-mcu/freertos/: Bridge_Freedom-metal_FreeRTOS.c  Bridge_Freedom-metal_FreeRTOS.h  FreeRTOSConfig.h  boot.S  freertos_risc_v_chip_specific_extensions.h  vector.S
bsp/wavious-mcu/metal/: machine.h  riscv_cpu_min.c  wav_test0.c
bsp/wavious-mcu/metal/drivers/: riscv_cpu_min.h
bsp/wavious-mcu/metal/machine/: inline.h  platform.h
bsp/wavious-wh440/: CMakeLists.txt  core.dts  design.dts  design.svd  metal.default.lds  metal.freertos.lds  metal.ramrodata.lds  metal.scratchpad.lds
bsp/wavious-wh440/board/: board.c  board.h  irq_map.h  memory_map.h
bsp/wavious-wh440/freertos/: Bridge_Freedom-metal_FreeRTOS.c  Bridge_Freedom-metal_FreeRTOS.h  FreeRTOSConfig.h  printf.c  vector.S
bsp/wavious-wh440/linker_debug/: metal.default.lds  metal.freertos.lds  metal.ramrodata.lds  metal.scratchpad.lds
bsp/wavious-wh440/metal/: machine.h
bsp/wavious-wh440/metal/machine/: inline.h  platform.h
docker/: Dockerfile
include/board/: board.h
include/drivers/messenger/: driver.h  messages_general.h
include/hal/: init.h
include/kernel/: completion.h  fsm.h  io.h  irq.h  list.h  messenger.h  notification.h  stateMachine.h
include/osal/: assert.h  completion.h  list.h  mutex.h  queue.h  semaphore.h  thread.h  time.h
src/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/messenger/: CMakeLists.txt  driver.c
src/drivers/messenger/posix/: CMakeLists.txt  driver.c
src/drivers/messenger/wavious-mcu/: CMakeLists.txt  driver.c
src/drivers/messenger/wavious-wh440/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/hal/posix/: CMakeLists.txt  init.c  irq.c
src/hal/posix/hal/: io.h  irq.h
src/hal/riscv/: CMakeLists.txt  init.c
src/hal/riscv/hal/: io.h  irq.h
src/hal/riscv/metal/drivers/: riscv_cpu_min.c  wav_test0.h  wmcu_uart0.c  wmcu_uart0.h
src/kernel/: CMakeLists.txt  README  completion.c  fsm.c  irq.c  list.c  messenger.c  notification.c  printf.c  stateMachine.c
src/osal/: CMakeLists.txt  printf.c
src/osal/freertos/: CMakeLists.txt  assert.c  completion.c  freertos_bridge.c  freertos_risc_v_chip_specific_extensions.h  list.c  mutex.c  queue.c  semaphore.c  thread.c  time.c
toolchain/: riscv.toolchain  riscv32.toolchain  riscv64.toolchain
